--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                     <li class="list-group-item"><a href="PR2/">Practical 2</a></li>
                     <li class="list-group-item"><a href="PR3/">Practical 3</a></li>
                     <li class="list-group-item"><a href="PR4/">Practical 4</a></li>
+                    <li class="list-group-item"><a href="PR5/">Practical 5</a></li>
+                    <li class="list-group-item"><a href="PR6/">Practical 6</a></li>
+                    <li class="list-group-item"><a href="PR7/">Practical 7</a></li>
                     <!-- Add more links as needed -->
                 </ul>
             </div>
